# ai-harvest-agent

./: .env.example  .gitignore  Dockerfile  README.md  architecture_diagram.html  check_naukri_urls.py  check_recruit_login.py  check_recruit_subdomain.py  create_prospects_xlsx.py  docker-compose.yml  find_employer_url.py  find_naukri_employer_url.py  pyproject.toml  requirements.txt  run.py  run_harvest.ps1  run_prospect.ps1  test_recruit_login_tab.py  test_recruit_stealth.py
app/: config.py  main.py
app/agents/: __init__.py  base_agent.py  confidence_validator.py  dice_agent.py  harvest_agent.py  lead_intelligence_orchestrator.py  lead_merge_agent.py  linkedin_agent.py  linkedin_lead_agent.py  naukri_agent.py  orchestrator.py  orchestrator_agent.py  premium_naukri_agent.py  prospect_intelligence_agent.py  recruiter_contact_agent.py  scraper_agent.py  verification_agent.py
app/core/: dependencies.py  exceptions.py  middleware.py  proactor.py  security.py
app/models/: __init__.py  agent.py  harvest.py  harvest_models.py  job_parser.py  lead_models.py  linkedin.py  prospect_models.py  response.py  response_models.py  task.py  unified_job.py
app/prompts/: analysis_prompts.py  base_prompts.py  extraction_prompts.py  harvest_prompts.py
app/routes/: agents.py  dice_routes.py  frontend_routes.py  harvest.py  harvest_routes.py  health.py  tasks.py  (+9 more)
config/: qualify_java_contract.json
job_parser_service/: .env.example  Dockerfile  config.py  conftest.py  gemini.py  main.py  models.py  requirements.txt
scripts/: scrape_linkedin_java_contracts.py
tests/: conftest.py
(+42 files in other folders)
