[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-harvest-agent"
version = "0.1.0"
description = "AI-powered web harvesting platform using Claude + Playwright"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "job_parser_service/tests"]
addopts = "-v --tb=short --import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
